--- a/Proposal/motivation.tex
+++ b/Proposal/motivation.tex
@@ -12,7 +12,8 @@ Most Internet users take a pragmatic stance on information disclosure. They impl
 However, as the increase of the diversity of IoT devices, it becomes more and more difficult to keep up with the many different ways in which data about ourselves is collected and disseminated. Although generally, users care about their privacy, few of them in practice find time to read the privacy policies or play around the privacy setting options that provided to them. There are several reasons leading to this problem: i) Users will think more of the benefit they will enjoy if they use the IoT devices or services than the potential risks if they disclose their information. ii) The privacy policies is too long, or the privacy setting of such devices are too complicated, making users irritated to finish reading/setting them. iii) As the rapid increment of numbers of IoT devices, the numbers and options of privacy setting for all the IoT devices are also increasing exponentially. This privacy-setting choice overload makes it difficult for IoT users to correctly and precisely make their decision to express their true demands. Thus, the main research question I propose to answer in my dissertation proposal is thus:
 
 
-\textbf{How can we help users simplify the task of controlling privacy setting for IoT devices in a user-friendly manner, so that they can make good privacy decisions?}
+                  \textbf{How can we help users simplify the task of controlling privacy setting for IoT devices in a user-friendly manner, 
+                  so that they can make good privacy decisions?}
 
 To answer this research question, we first conduct a preliminary user study based on interviews with potential users to understand the acceptability of IoT systems and devices. We interviewed 10 users with the demographics shown in Table~\ref{tab:demographics1}. The interviews are approximately 30-50 minutes in length and covered a wide range of open questions related to IoT. These questions need participants to input their personal preferences about technology and self-perceived tech savviness. We first recorded the entire conversation with the participants on the understanding that their anonymity was kept. The entire recorded conversation was then transcribed manually. We also tried to take note of other interpersonal cues, e.g. body language, as well. Keywords, such as privacy and ease of use, have been focused on. During the analysis, we extracted the key statement from our interviews and used card sorting and affinity diagram techniques to group the specific statements.
 
